working take samples

--- a/Bayesian-commented-without-net-tcp-euclidian-Rishabh.ipynb
+++ b/Bayesian-commented-without-net-tcp-euclidian-Rishabh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "Only one local in-process GUI/GUI_SERVER connection allowed. Use DIRECT connection mode or start a separate GUI physics server (ExampleBrowser, App_SharedMemoryPhysics_GUI, App_SharedMemoryPhysics_VR) and connect over SHARED_MEMORY, UDP or TCP instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-8823579d8c07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Create a experiment env\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv_pybullet_kin_gen3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mno_zeros\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mExcel_path_Okay_tcp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"./positions_from_joints_19.xlsx\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtime_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhome_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.207226464676801\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5689993219813\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1.01515387451347\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2.45271819663908\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.00795352004673\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.91098991659003\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.831045149646278\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisual_inspection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#Initially parameters of the urdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/GitHub/Parameters_CrossEntrophy_TFM/env_pybullet_gen3.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, visual, Excel_path_Okay, Excel_path_Okay_tcp, experiment, orient_multiply, repeats, no_zeros, time_step, home_angles)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisual\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGUI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hola\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: Only one local in-process GUI/GUI_SERVER connection allowed. Use DIRECT connection mode or start a separate GUI physics server (ExampleBrowser, App_SharedMemoryPhysics_GUI, App_SharedMemoryPhysics_VR) and connect over SHARED_MEMORY, UDP or TCP instead."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n",
+      "../Simulation_Pybullet/models/urdf/JACO3_URDF_V11.urdf\n",
+      "Robot launched\n",
+      "hola\n",
+      "(7, 12)\n",
+      "(7, 17)\n",
+      "0    168\n",
+      "1    151\n",
+      "2    128\n",
+      "3     94\n",
+      "4    210\n",
+      "5     48\n",
+      "6    189\n",
+      "Name: max_vel, dtype: int64\n",
+      "       mass damping       Ixx       Iyy       Izz   kp   ki   kd  max_vel  \\\n",
+      "0  1.377353       0  0.004801  0.004755  0.002283  0.1  0.0  0.0      168   \n",
+      "1  1.163667       0  0.008419  0.001920  0.008361  0.1  0.0  0.0      151   \n",
+      "2  1.163660       0  0.007545  0.007487  0.001921  0.1  0.0  0.0      128   \n",
+      "3  0.930287       0  0.006410  0.001380  0.006518  0.1  0.0  0.0       94   \n",
+      "4  0.678106       0  0.001680  0.001506  0.000826  0.1  0.0  0.0      210   \n",
+      "5  0.678106       0  0.001938  0.000827  0.001763  0.1  0.0  0.0       48   \n",
+      "6  0.500657       0  0.000775  0.000585  0.000975  0.1  0.0  0.0      189   \n",
+      "\n",
+      "   force_x_one  \n",
+      "0            1  \n",
+      "1            1  \n",
+      "2            1  \n",
+      "3            1  \n",
+      "4            1  \n",
+      "5            1  \n",
+      "6            1  \n",
+      "observation space: 1\n",
+      "mass okey\n",
+      "max_vel okey\n",
+      "kp okey\n",
+      "ki okey\n",
+      "kd okey\n",
+      "force_x_one okey\n",
+      "Ixx okey\n",
+      "Iyy okey\n",
+      "Izz okey\n",
+      "action space: 63\n",
+      "original action: [1.377353, 1.163667, 1.16366, 0.930287, 0.678106, 0.678106, 0.500657, 168, 151, 128, 94, 210, 48, 189, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 1, 1, 1, 1, 1, 1, 1, 0.00480078220558528, 0.008418724123621643, 0.007544516197001279, 0.0064096919604697605, 0.0016797846804208455, 0.0019375935324615593, 0.0007750385804833523, 0.004755191268457921, 0.0019202057294098781, 0.007486605057526543, 0.0013804130332615912, 0.0015062421641084327, 0.0008273237988932355, 0.0005849825981943527, 0.0022826303695446856, 0.00836116845951151, 0.0019205500000651847, 0.006517816917001926, 0.0008260694053789821, 0.0017630597813546379, 0.0009751695712112207]\n"
      ]
     }
    ],
@@ -72,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +118,7 @@
     "sigma = 0.3\n",
     "original_action = np.array(env.action_original())\n",
     "np.random.seed(0)\n",
-    "Create = True\n",
+    "Create = False\n",
     "rewards = []\n",
     "actions = []\n",
     "\n",
@@ -105,9 +142,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "actions\n",
+      "(1400, 63)\n",
+      "[[2.10626984e+00 1.30336192e+00 1.50533547e+00 ... 6.59419705e-04\n",
+      "  1.57288567e-03 7.37282918e-04]\n",
+      " [6.64042844e-01 1.22560648e+00 1.02339908e+00 ... 1.15477545e-03\n",
+      "  1.39569038e-03 9.31393856e-04]\n",
+      " [1.19754499e+00 1.80924515e+00 1.39835676e+00 ... 5.52380219e-04\n",
+      "  1.79065083e-03 7.58809772e-04]\n",
+      " ...\n",
+      " [1.97407477e+00 6.37037773e-01 1.16377190e+00 ... 1.12702430e-03\n",
+      "  1.26605998e-03 1.19178768e-03]\n",
+      " [7.96462938e-01 1.29488958e+00 9.74594365e-01 ... 9.36204322e-04\n",
+      "  1.23476868e-03 1.05441314e-03]\n",
+      " [1.28513665e+00 6.25185039e-01 1.18711875e+00 ... 7.00949285e-04\n",
+      "  2.19622534e-03 1.02368897e-03]]\n",
+      "rewards\n",
+      "(1400, 1)\n",
+      "[[-0.15615385]\n",
+      " [-0.17645011]\n",
+      " [-0.32277424]\n",
+      " ...\n",
+      " [-0.21721271]\n",
+      " [-0.19800912]\n",
+      " [-0.16752433]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"actions\")\n",
     "print(actions.shape)\n",
@@ -119,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<paramz.optimization.optimization.opt_SCG at 0x7fb5385a7050>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create a Gaussian model, which models the relation between parameters and score\n",
     "kernel = GPy.kern.Linear(actions.shape[1], ARD=1)\n",
@@ -134,9 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n",
+      "[[0.02282811]\n",
+      " [0.03597479]\n",
+      " [0.02785162]\n",
+      " ...\n",
+      " [0.0731605 ]\n",
+      " [0.02331862]\n",
+      " [0.02780115]]\n",
+      "error_max\n",
+      "[0.26048575]\n",
+      "error_mean\n",
+      "[0.02714948]\n"
+     ]
+    }
+   ],
    "source": [
     "predictions =  model.predict(actions)\n",
     "\n",
@@ -154,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,28 +271,55 @@
     "        actions_model.append(action)\n",
     "    actions_model = np.array(actions_model)\n",
     "    \n",
-    "    rewards_model = model.predict(actions_model)\n",
+    "    prediction = model.predict(actions_model)\n",
+    "    rewards_model = np.array(prediction[0])\n",
     "    \n",
     "    elite_idxs = rewards_model.argsort()[-n_elite:]\n",
-    "    elite_weights = [weights_pop[i] for i in elite_idxs]\n",
+    "    elite_actions = [actions_model[i] for i in elite_idxs]\n",
     "\n",
     "    #Set the best weight as the mean of the best ones \n",
     "\n",
-    "    best_weight = np.array(elite_weights).mean(axis=0)\n",
+    "    best_action = np.array(elite_actions).mean(axis=0)\n",
     "    best_rewards = rewards_model.argsort()[-n_elite:]\n",
     "    \n",
-    "    return best_weight,best_rewards\n",
+    "    return best_action,best_rewards\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]]\n",
+      "[[1.74888546e+00 8.71340795e-01 1.30801155e+00 7.94931450e-01\n",
+      "  7.78222445e-01 6.91341992e-01 4.69188843e-01 1.02012704e+02\n",
+      "  2.37780727e+02 9.19188266e+01 1.13417027e+02 1.73919629e+02\n",
+      "  7.00817512e+01 1.72033563e+02 1.13274482e-01 8.17524916e-02\n",
+      "  8.45878640e-02 1.06371286e-01 7.44470800e-02 7.29366067e-02\n",
+      "  1.32978328e-01 7.75892079e-02 1.96693120e-02 4.85411772e-02\n",
+      "  6.21368640e-02 5.96542087e-02 5.19383184e-02 4.78997213e-02\n",
+      "  5.69843384e-02 3.44262844e-02 5.51881573e-02 3.39141982e-02\n",
+      "  5.26951122e-02 4.30974703e-02 5.80267862e-02 7.99847557e-01\n",
+      "  6.97672933e-01 5.11679629e-01 1.44085338e+00 8.91453615e-01\n",
+      "  1.12878321e+00 1.11557190e+00 4.59736268e-03 8.14862003e-03\n",
+      "  6.79916974e-03 4.44293193e-03 1.59292106e-03 2.26721121e-03\n",
+      "  6.52364597e-04 5.33631470e-03 1.97016972e-03 1.04777438e-02\n",
+      "  1.70828555e-03 1.85651798e-03 1.03863995e-03 8.19729445e-04\n",
+      "  2.08463231e-03 6.23379061e-03 1.69591499e-03 8.07849726e-03\n",
+      "  1.13669271e-03 1.75002324e-03 1.29463944e-03]]\n"
+     ]
+    }
+   ],
    "source": [
-    "best_weight,best_rewards = Get_best_action_from_model(env,model)"
+    "best_action,best_rewards = Get_best_action_from_model(env,model)\n",
+    "print(best_rewards)\n",
+    "print(best_action)\n"
    ]
   },
   {
